Trivera test day1

--- a/WhatWeDo.html
+++ b/WhatWeDo.html
@@ -3,14 +3,23 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Training Industry Services</title>
+<title>What We Do</title>
 <link rel="stylesheet" href="trivera.css">
 </head>
 <body>
 <div class="container">
-    <header>
+    <div style="display: flex; justify-content: space-between;">
+        <p style="background-color: papayawhip;">Lorem ipsum dolor sit amet.</p>
+        <p style="background-color: palegoldenrod;">Donec eget luctus lacus.</p>
+      </div>
+      <div style="display: flex; justify-content: space-between;">
+        <p style="flex-basis: 49.5%; background-color: papayawhip;">Lorem ipsum dolor sit amet, .</p>
+        <p style="flex-basis: 49.5%; background-color: palegoldenrod;">Pellentesque aliquet condimentum augue in mattis. </p>
+        <!-- 49.5% + 49.5% = 99%, remaining 1% is distributed according to justify-content -->
+      </div>
+    <div>
         <h1>Today we lead the training industry with:</h1>
-    </header>
+    </div>
     <section class="services">
         <div class="service">
             <h2>Robust portfolio of over 1,000 technology courses</h2>
