--- a/WhatWeDo.html
+++ b/WhatWeDo.html
@@ -8,18 +8,13 @@
 </head>
 <body>
 <div class="container">
-    <div style="display: flex; justify-content: space-between;">
-        <p style="background-color: papayawhip;">Lorem ipsum dolor sit amet.</p>
-        <p style="background-color: palegoldenrod;">Donec eget luctus lacus.</p>
-      </div>
-      <div style="display: flex; justify-content: space-between;">
-        <p style="flex-basis: 49.5%; background-color: papayawhip;">Lorem ipsum dolor sit amet, .</p>
-        <p style="flex-basis: 49.5%; background-color: palegoldenrod;">Pellentesque aliquet condimentum augue in mattis. </p>
+    <h3><span style="color:#de7a20; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Do</span></h3>
+      <div style="display: flex; justify-content:center;">
+        
+        <h1 style="margin-top:1%;flex-basis: 30%;"><span style="color:#559fc3; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">Today</span> we lead the training industry with:</h1>
+        <h4 style="flex-basis: 70%;"><span style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Boasting one of the most extensive technology course catalogs in the industry, we also offer a broad range of custom training services, courseware and educational materials. </span></h4>
         <!-- 49.5% + 49.5% = 99%, remaining 1% is distributed according to justify-content -->
       </div>
-    <div>
-        <h1>Today we lead the training industry with:</h1>
-    </div>
     <section class="services">
         <div class="service">
             <h2>Robust portfolio of over 1,000 technology courses</h2>
