--- a/WhatWeDo.html
+++ b/WhatWeDo.html
@@ -1,46 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>What We Do</title>
-<link rel="stylesheet" href="trivera.css">
-</head>
-<body>
-<div class="container">
-    <h3><span style="color:#de7a20; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">What We Do</span></h3>
-      <div style="display: flex; justify-content:center;">
-        
-        <h1 style="margin-top:1%;flex-basis: 30%;"><span style="color:#559fc3; font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif">Today</span> we lead the training industry with:</h1>
-        <h4 style="flex-basis: 70%;"><span style="font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;">Boasting one of the most extensive technology course catalogs in the industry, we also offer a broad range of custom training services, courseware and educational materials. </span></h4>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>What We Do</title>
+    <link rel="stylesheet" href="trivera.css" />
+  </head>
+  <body>
+    
+    <div class="container">
+        <div class="what-we-do">
+            <h3>
+              <span
+                style="
+                  color: #de7a20;
+                  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+                    sans-serif;
+                "
+                >What We Do</span
+              >
+            </h3>
+          </div>
+      <div style="display: flex;">
+        <h1 style="margin-top: 1%; flex-basis: 30%">
+          <span
+            style="
+              color: #559fc3;
+              font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+                sans-serif;
+            "
+            >Today</span
+          >
+          we lead the training industry with:
+        </h1>
+        <h4 style="flex-basis: 70%">
+          <span
+            style="
+              font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS',
+                sans-serif;
+            "
+            >Boasting one of the most extensive technology course catalogs in
+            the industry, we also offer a broad range of custom training
+            services, courseware and educational materials.
+          </span>
+        </h4>
         <!-- 49.5% + 49.5% = 99%, remaining 1% is distributed according to justify-content -->
       </div>
-    <section class="services">
-        <div class="service">
-            <h2>Robust portfolio of over 1,000 technology courses</h2>
+      <div class="two-color-box"></div>
+      <!-- This is the two-color box -->
+
+      <section class="services">
+        <div class="service-blue">
+          <h2>Robust portfolio of over 1,000 technology courses</h2>
         </div>
-        <div class="service">
-            <h2>Flexible and customized IT skills development services</h2>
+        <div class="service-green">
+          <h2>Flexible and customized IT skills development services</h2>
         </div>
-        <div class="service">
-            <h2>Proven mentoring and coaching programs</h2>
+        <div class="service-orange">
+          <h2>Proven mentoring and coaching programs</h2>
         </div>
-        <div class="service">
-            <h2>New hire training and re-skilling programs</h2>
+        <div class="service-green">
+          <h2>New hire training and re-skilling programs</h2>
         </div>
-        <div class="service">
-            <h2>Extensive courseware licensing</h2>
+        <div class="service-orange">
+          <h2>Extensive courseware licensing</h2>
         </div>
-        <div class="service">
-            <h2>Authorized training</h2>
+        <div class="service-blue">
+          <h2>Authorized training</h2>
         </div>
-        <div class="service">
-            <h2>Corporate learning events and programs</h2>
+        <div class="service-blue">
+          <h2>Corporate learning events and programs</h2>
         </div>
-        <div class="service">
-            <h2>IT vendor management</h2>
+        <div class="service-green">
+          <h2>IT vendor management</h2>
         </div>
-    </section>
-</div>
-</body>
+      </section>
+    </div>
+  </body>
 </html>
